2014-08-12  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/main_menu.php: Bugfix.

2014-08-11  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/constants.php: Added new constants with the seconds
	contained in some date ranges.

	* include/constants.php: Added the function
	"translate_lead_estimated_sale". Fixed the function
	"translate_lead_estimated_close_date".

	* include/js/integria.js: Now the function "toggleDiv"
	can toggle the elements with a slide animation.

	* operation/leads/lead_detail.php: Fixed the lead alarm
	functionality. Added more elements to the lead tracking.
	Minor fixes.

	* operation/leads/lead_pipeline.php: Now some elements
	show an icon with certain changes on the last 7 days.
	Now is possible to change the order of the elements.
	Now is possible to show the closed leads.

2014-08-08  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/styles/integria.css: Created a new style for
	the estimated close date in the pipeline.

	* include/functions_form.php: Added the function
	"translate_lead_estimated_close_date".
	
	* operation/leads/lead_detail.php: Improved the insertions
	and updates. Added the new item: estimated close date.

	* operation/leads/lead_pipeline.php: Now the estimated
	close date are showed below the owner if exists.

	* extras/mr/12.sql: Added file. New MR12.

2014-08-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/styles/integria.css: Fixed the max height of
	the header images.

2014-08-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* index.php,
	  operation/main_menu.php,
	  operation/side_menu.php: Added support to load the
	enterprise custom screens.

2014-08-01  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* images/custom_screens/widgets,
	  images/custom_screens/widgets/custom_url.png,
	  images/custom_screens/widgets/downloads.png,
	  images/custom_screens/widgets/knowledgebase.png,
	  images/custom_screens/widgets/status.png,